Fixed svg Issue on IE (z-index on section)

--- a/resources/partials/section-2_about/about.sass
+++ b/resources/partials/section-2_about/about.sass
@@ -2,7 +2,6 @@
     @extend .section
     background-color: #212121
     color: $orange-light
-    z-index: 2
     height: 120vh
     &__text
         color: white
