--- a/resources/partials/section-5_why-me/_why-me.sass
+++ b/resources/partials/section-5_why-me/_why-me.sass
@@ -2,7 +2,6 @@
     @extend .section
     background-color: $orange-primary
     color: #fff
-    z-index: 4
     height: 120vh
     &__text
         color: $grey-dark
