--- a/resources/partials/section-6_contact/_contact.sass
+++ b/resources/partials/section-6_contact/_contact.sass
@@ -2,7 +2,6 @@
     @extend .section
     background-color: #EEE
     color: #000
-    z-index: 5
     height: 120vh
     &__text
         color: $grey-dark
